--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,16 @@
                 <b>
                     Have fun!
                 </b>
+                <br/>
+                <br/>
+                <div id="github">
+                    <div>
+                        You can check a code on my github:
+                    </div>
+                    <div>
+                        <a href=""><img src="GithubIcon.png"/></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
