--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             <div id="header">
                 <h1>The Clockwise Spiral generator</h1>
                 <h3>A project made by Szymon Orchowski, inspired by a kata by alex.budiakov.</h3>
-                <p>This simple project comes up as a side result of my everyday coding practice. During solving one of Codewars's kata titled: "The Clockwise Spiral" I decided to code a visual presentation of a final algorithm.</p>
+                <p>This simple project comes up as a side result of my everyday coding practice. During solving one of Codewars's kata titled: <a href="https://www.codewars.com/kata/536a155256eb459b8700077e">The Clockwise Spiral</a> I decided to code a visual presentation of a final algorithm.</p>
                 <h3>Here is an original kata description:</h3>
                 <p>
                     <i>
@@ -86,10 +86,10 @@
                 <br/>
                 <div id="github">
                     <div>
-                        You can check a code on my github:
+                        You can check a code of that project on my github:
                     </div>
                     <div>
-                        <a href=""><img src="GithubIcon.png"/></a>
+                        <a href="https://github.com/SzymonOrchowski/clockwise_spiral_3d_generator"><img src="GithubIcon.png" width="100"/></a>
                     </div>
                 </div>
             </div>
